<resources>
    <string name="app_name">M&amp;R CLARA - Client Portal</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">LogOut</string>
    <string name="action_notification">Notification</string>

    <string name="menu_home">Home</string>
    <string name="menu_matter">Matter</string>
    <string name="menu_quotation">Quotation</string>
    <string name="menu_payment_plan">Payment Plan</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_document">Document</string>
    <string name="menu_document_upload">Document Upload</string>
    <string name="menu_initial_retainer">Initial Retainer</string>
    <string name="menu_log_out">Logout</string>
    <string name="menu_checklist">Checklist</string>
    <string name="menu_receipt_no">Receipt Number</string>
    <string name="mobile_otp">Mobile OTP</string>
    <string name="email_otp">Email OTP</string>
    <string name="mobile_no">Mobile No</string>
    <string name="login">Login</string>
    <string name="mobile_otp_header">ENTER NUMBER TO GET ONE TIME\nPASSWORD (OTP)</string>
    <string name="email_otp_header">ENTER EMAIL TO GET ONE TIME\nPASSWORD (OTP)</string>
    <string name="view">View</string>
    <string name="payment">Payment</string>
    <string name="email">Email</string>
    <string name="mobile_no_empty_message">Please enter Mobile No</string>
    <string name="email_empty_message">Please enter Email id</string>
    <string name="valid_email_message">Please enter valid Email Id</string>
    <string name="valid_mobile_message">Please enter Valid Mobile No</string>
    <string name="otp_empty_message">Please enter OTP</string>
    <string name="edit_text_and_otp_empty_message">Please enter valid %s and OTP</string>
    <string name="hi">Hi&#160;</string>
    <string name="matter_no">Matter No</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="open_on">Open On</string>
    <string name="filed_on">Filed On</string>
    <string name="receipt_on">Receipt On</string>
    <string name="rfe_on">RFE On</string>
    <string name="approved_on">Approved On</string>
    <string name="closed_on">Closed On</string>
    <string name="quote_no">Quote No</string>
    <string name="invoice_no">Invoice No</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="matter">Matter - %s</string>
    <string name="dollar_symbol">&#36;</string>
    <string name="na">NA</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="payment_plan_no">Payment Plan No</string>
    <string name="amount">Amount</string>
    <string name="payment_plan_details">Payment Plan Details</string>
    <string name="installment_amount">Installment Amount</string>
    <string name="no_of_installments">No of Installments</string>
    <string name="payment_plan_amount">Payment Plan Amount</string>
    <string name="installment_no">Installment No</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="due_date">Due date</string>
    <string name="document_type">Document Type</string>
    <string name="type">Type</string>
    <string name="receipt_no">Receipt No</string>
    <string name="upload">Upload</string>
    <string name="received_date">Received Date</string>
    <string name="document_name">Document Name</string>
    <string name="document">Document</string>
    <string name="uploaded_by">Uploaded By</string>
    <string name="you">You</string>
    <string name="m_r">M&amp;R</string>
    <string name="matter_id">Matter ID</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_choose">No file choosen</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_file_from">Choose File From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="files">Files</string>
    <string name="select">Select</string>
    <string name="please_choose_matter_id">Please select Matter Id</string>
    <string name="please_select_file">Please select File</string>
    <string name="matter_id_and_file_empty_message">Please select Matter Id And File</string>
    <string name="upload_success_message">File successfully uploaded</string>
    <string name="attachment">Attachment</string>
    <string name="submit">Submit</string>
    <string name="document_checklist">Document Checklist</string>
    <string name="do_you_want_to_submit">Do you want to submit?</string>
    <string name="file_name">File Name: %s</string>
    <string name="no_network">Please check your network connect</string>
    <string name="otp_success_message">OTP Sent Successfully</string>
    <string name="app_version">App Version %s</string>
    <string name="api_failure_message">Sorry something went wrong!. Please retry again.</string>
    <string name="email_id">Email Id</string>
    <string name="no_document_to_display">No data available</string>
    <string name="no_payment_to_display">No payment to display</string>
    <string name="details">Details</string>
    <string name="actions">Actions</string>
    <string name="doc">Doc</string>
    <string name="phone">Phone</string>
    <string name="tablet">Tablet</string>
    <string name="send">Send</string>
    <string name="received">Received</string>
    <string name="download">Download</string>
    <string name="pending">Pending</string>
    <string name="uploaded">Uploaded</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="upload_error_message">Sorry, Already uploaded, can\'t re-upload</string>
    <string name="submit_error_message">Sorry, Already submitted, can\'t re-submit</string>
    <string name="submit_subtitle">Once submitted, can\'t re-submit</string>
    <string name="please_upload_file_to_submit">Please upload file to submit</string>
    <string name="submit_success_message">File successfully submitted</string>
    <string name="notification_channel_id" translatable="false">clara_client_portal_channel</string>
    <string name="notification_channel_name" translatable="true">clara client portal</string>
    <string name="notification">Notifications</string>
    <string name="notification_denied_message">Permission was denied. The app will not show notifications.</string>
    <string name="privacy_policy">By continuing, you agree to the Privacy Policy</string>
</resources>