<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="@dimen/dp_24"
            android:paddingTop="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_log_out_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab_semi_bold"
                android:text="@string/logout_title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Logout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_log_out_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="@string/logout_message"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_log_out_title"
                tools:text="Do you want to logout?" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_28"
                android:fontFamily="@font/roboto_slab_semi_bold"
                android:padding="@dimen/dp_8"
                android:text="@string/no"
                android:textAlignment="center"
                android:textColor="@color/color_devil_blue"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toStartOf="@+id/text_yes"
                app:layout_constraintTop_toBottomOf="@+id/text_log_out_message"
                tools:text="No" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:fontFamily="@font/roboto_slab_semi_bold"
                android:padding="@dimen/dp_8"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="@color/color_devil_blue"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_log_out_message"
                tools:text="Yes" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/lyt_progress_parent"
            layout="@layout/include_progress" />
    </FrameLayout>
</layout>