<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/dp_52"
            android:layout_height="@dimen/dp_52"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/grid_view_background"
            android:padding="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_close">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_upload_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:fontFamily="@font/roboto_slab_semi_bold"
                android:text="@string/choose_file_from"
                android:textAlignment="textStart"
                android:textColor="@color/color_devil_blue"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Choose File From" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_camera"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_24"
                app:layout_constraintEnd_toStartOf="@+id/img_gallery"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_upload_header"
                app:srcCompat="@drawable/ic_camera" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:fontFamily="@font/roboto_slab_semi_bold"
                android:text="@string/camera"
                android:textAlignment="center"
                android:textColor="@color/color_devil_blue"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toStartOf="@+id/text_gallery"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/img_camera"
                app:layout_constraintTop_toBottomOf="@+id/img_camera"
                tools:text="Camera" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_gallery"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_24"
                app:layout_constraintEnd_toStartOf="@+id/img_files"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/img_camera"
                app:layout_constraintTop_toBottomOf="@+id/text_upload_header"
                app:srcCompat="@drawable/ic_gallery" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:fontFamily="@font/roboto_slab_semi_bold"
                android:text="@string/gallery"
                android:textAlignment="center"
                android:textColor="@color/color_devil_blue"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toStartOf="@+id/text_files"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/text_camera"
                app:layout_constraintTop_toBottomOf="@+id/img_gallery"
                tools:text="Gallery" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_files"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/img_gallery"
                app:layout_constraintTop_toBottomOf="@+id/text_upload_header"
                app:srcCompat="@drawable/ic_folder" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_files"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:fontFamily="@font/roboto_slab_semi_bold"
                android:text="@string/files"
                android:textAlignment="center"
                android:textColor="@color/color_devil_blue"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/text_gallery"
                app:layout_constraintTop_toBottomOf="@+id/img_files"
                tools:text="Files" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>